[package]
name = "vortex-db"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "^1.2.2", features = ["v1", "serde"] }
rocksdb = "0.23.0"
byteorder = "^1.5.0"
bincode = { version = "^2.0.1", optional = true }
serde = { version = "^1.0.57", features = ["derive"] }
serde_json = "^1.0.57"
parking_lot = "^0.12.3"
internment = "0.8.6"
anyhow = "1.0.97"
ouroboros = "0.18.5"
async-channel = "2.3.0"
num_cpus = "1.16.0"
once_cell = "1.21.1"
async-trait = "0.1.88"
chrono = "0.4.41"
rust_decimal = "1.37.1"

[features]
kv-rocksdb = []
kv-mem = []